-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.1.0
-
None
If you open this picturewith QtDesigner,the effect is wrong.The file is qbmphandler.cpp and the function is read_dib_body。
- relates to
-
QTBUG-21461 QImage doesn't support ARGB8 BMP files.
-
- Closed
-
For Gerrit Dashboard: QTBUG-35220 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
73640,3 | Fixes: 32 bit and alpha bmp format image reading | dev | qt/qtbase | Status: MERGED | +2 | 0 |